--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-search-autocomplete": "^8.5.2",
     "react-shimmer-effects": "^1.0.3"
   },
   "devDependencies": {
